<resources>
    <string name="app_name">Wan Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">主页</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_todo">待办</string>
    <string name="menu_qa">问答</string>
    <string name="menu_square">广场</string>

    <string name="share">分享</string>
    <string name="menu_update">更新</string>
    <string name="menu_about">关于</string>

    <string name="title_dashboard">公众号</string>
    <string name="title_notifications">体系</string>
    <string name="title_navigation">导航</string>
    <string name="title_project">项目</string>

    <!-- Splash   -->
    <string name="str_copyright">Copyright \u00a9 2020-present CCAONG</string>

    <!--加载-->
    <string name="loading">加载中&#8230;</string>
    <string name="load_error">加载出错</string>
    <string name="no_network">没有网络，点击重试</string>
    <string name="no_data">没有数据</string>

    <!--错误-->
    <string name="error_unknown">未知错误</string>
    <string name="error_http">HTTP错误</string>
    <string name="error_network">当前网络不可用，请检查您的网络连接</string>
    <string name="error_parse">解析错误</string>
    <string name="error_ssl">SSL错误</string>

    <string name="chapter_name_format">%1$s / %2$s</string>
    <string name="fresh">新</string>
    <string name="top">置顶</string>


    <string name="skip">跳过：</string>
    <string name="time_s">s</string>
    <string name="time_5">5s</string>
    <string name="time_4">4s</string>
    <string name="time_3">3s</string>
    <string name="time_2">2s</string>
    <string name="time_1">1s</string>
    <string name="time_0">0s</string>


    <string name="no_login">未登录</string>
    <string name="click_login">点击登陆</string>

    <string name="login">登陆</string>
    <string name="user_name">用户名</string>
    <string name="user_pwd">密码</string>
    <string name="re_user_pwd">确认密码</string>


    <string name="register">我要注册</string>
    <string name="btn_register">注册</string>
    <string name="register_success">注册成功！</string>
    <string name="register_error">两次输入的密码不一致，请检查后重新输入</string>

    <string name="collect">收藏</string>

    <string name="mine">我的</string>
    <string name="integral">积分</string>
    <string name="rank">排名</string>
    <string name="my_todo">我的待办</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_share">我的分享</string>
    <string name="integral_details">积分详情</string>
    <string name="integral_ranking">积分排行</string>
    <string name="system_setting">系统设置</string>
    <string name="logout">退出登陆</string>

    <string name="todo_title">标题</string>
    <string name="todo_update">更新待办事项</string>
    <string name="todo_add">添加</string>

    <string name="todo_type">分类</string>

    <string name="todo_study">学习</string>
    <string name="todo_work">工作</string>
    <string name="todo_life">生活</string>
    <string name="todo_other">其他</string>

    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="done_time">计划完成时间</string>
    <string name="add_todo_title">新增待办</string>

    <string name="author">作者：</string>
    <string name="author_name">CCAONG</string>

    <string name="article">文章</string>
    <string name="no_more_data">--  没有更多数据了  --</string>


    <string name="project_introduction">项目简介</string>
    <string name="brief_introduction">项目采用java+MVVM+JetPack编写</string>

    <string name="introduction">该项目采用了jetpack库,项目起源于作者想要系统的学习jetpack组件，在写了一系列demo后，萌生出了利用wanAndroid的api写一个项目的想法。wanAndroid的开源项目实在太多太多，
    但是大多都为java+MVP或kotlin+MVVM的项目。没有找到一个相对好的使用java+MVVM+jetpack开发的项目。</string>

    <string name="contact_author">联系作者</string>
    <string name="contact_information">QQ：872188628</string>
    <string name="project_address">项目地址</string>
    <string name="github_address">https://github.com/ccaong/JetpackDemo</string>

    <string name="check_update">检查更新</string>
    <string name="update_plan">更新计划</string>
    <string name="update_plan_1">添加room数据库，实现部分数据的离线存储功能；</string>
    <string name="update_plan_2">使用paging，完善列表分页功能；</string>
    <string name="update_plan_3">实现WanAndroid提供的所有API；</string>
    <string name="update_plan_4">完成系统设置功能；</string>
    <string name="update_plan_5">优化程序界面，完善app动画效果；</string>
    <string name="update_plan_6">提供更换主题功能；</string>

    <string name="update_record">更新记录</string>
    <string name="update_record_1">2020-03-03 V1.0 第一版本；</string>


    <string name="thank">特别感谢</string>

    <string name="thank_list_1">鸿洋</string>
    <string name="thank_list_address">https://wanandroid.com/</string>
    <string name="thank_list_1_info">鸿洋大神提供的玩Android　API</string>

    <string name="thank_list_２">JetPack</string>
    <string name="thank_list_２_info">Jetpack 是一套库、工具和指南，可帮助开发者更轻松地编写优质应用。</string>
    <string name="thank_list_２_address">https://developer.android.google.cn/jetpack</string>

    <string name="thank_list_rxjava">RxJava</string>
    <string name="thank_list_rxjava_address">https://github.com/ReactiveX/RxJava</string>
    <string name="thank_list_rxjava_info">RxJava是Reactive Extensions的Java VM实现：该库用于通过使用可观察的序列来组成异步和基于事件的程序。</string>

    <string name="thank_list_retrofit">Retrofit</string>
    <string name="thank_retrofit_address">https://github.com/square/retrofit</string>
    <string name="thank_retrofit_info">Type-safe HTTP client for Android and Java by Square, Inc.</string>


    <string name="thank_list_glide">Glide</string>
    <string name="thank_list_glide_address">https://github.com/bumptech/glide</string>
    <string name="thank_list_glide_info">Glide是一个快速高效的Android图片加载库，注重于平滑的滚动。</string>

    <string name="thank_glide_transformations">glide-transformations</string>
    <string name="thank_glide_transformations_address">https://github.com/wasabeef/glide-transformations</string>
    <string name="thank_glide_transformations_info">一个Android转换库，为Glide提供了各种图像转换。</string>

    <string name="thank_flexbox">flexbox</string>
    <string name="thank_flexbox_address">https://github.com/google/flexbox-layout</string>
    <string name="thank_flexbox_info">FlexboxLayout是一个库项目，将CSS Flexible Box Layout Module的类似功能引入了Android。</string>

    <string name="thank_hawk">Hawk</string>
    <string name="thank_hawk_address">https://github.com/orhanobut/hawk</string>
    <string name="thank_hawk_info">适用于Android的安全，简单的键值存储库</string>

    <string name="thank_qmui">QMUI</string>
    <string name="thank_qmui_address">https://qmuiteam.com/android</string>
    <string name="thank_qmui_info">QMUI Android 的设计目的是用于辅助快速搭建一个具备基本设计还原效果的 Android 项目</string>

    <string name="thank_AgentWeb">AgentWeb</string>
    <string name="thank_AgentWeb_address">https://github.com/Justson/AgentWeb</string>
    <string name="thank_AgentWeb_info">AgentWeb 是一个基于的 Android WebView ，极度容易使用以及功能强大的库，提供了 Android WebView 一系列的问题解决方案 ，并且轻量和极度灵活</string>


    <string name="thank_smartRefreshLayout">smartRefreshLayout</string>
    <string name="thank_smartRefreshLayout_address">https://github.com/scwang90/SmartRefreshLayout</string>
    <string name="thank_smartRefreshLayout_info">SmartRefreshLayout以打造一个强大，稳定，成熟的下拉刷新框架为目标，并集成各种的炫酷、多样、实用、美观的Header和Footer</string>

    <string name="thank_phoenix">phoenix</string>
    <string name="thank_phoenix_info">Android平台上拍照/录像，图片/视频选择，编辑和压缩的一站式解决方案。</string>
    <string name="thank_phoenix_address">https://github.com/sucese/phoenix</string>

    <string name="thank_VerticalTabLayout">VerticalTabLayout</string>
    <string name="thank_VerticalTabLayout_address">https://github.com/qstumn/VerticalTabLayout</string>
    <string name="thank_VerticalTabLayout_info">垂直竖向的Android TabLayout</string>

    <string name="thank_banner">MZBannerView</string>
    <string name="thank_banner_address">https://github.com/pinguo-zhouwei/MZBannerView</string>
    <string name="thank_banner_info">图片轮播控件,支持多种模式切换：普通ViewPager使用，普通Banner使用</string>

    <string name="thank_poptab">PopsTabView</string>
    <string name="thank_poptab_address">https://github.com/ccj659/PopsTabView</string>
    <string name="thank_poptab_info">PopsTabView是个filter容器,他可以自动,快速,构建不同筛选样式,自由组合成一组tab</string>

</resources>
