<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@mipmap/ic_wechat"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@mipmap/ic_system"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_navigation"
        android:icon="@mipmap/ic_navigation"
        android:title="@string/title_navigation" />
    <item
        android:id="@+id/navigation_project"
        android:icon="@mipmap/ic_project"
        android:title="@string/title_project" />

</menu>
