<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.ui.nav.about.AboutViewModel" />
    </data>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <com.scwang.smart.refresh.header.TwoLevelHeader
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/second_floor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/splash_bg"
                android:scaleType="centerCrop" />

            <FrameLayout
                android:id="@+id/second_floor_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0">

                <ImageView
                    android:id="@+id/iv_second_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_second"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.scwang.smart.refresh.header.TwoLevelHeader>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingHorizontal="@dimen/dimen_16">


                <ImageView
                    android:id="@+id/iv_header"
                    android:layout_width="@dimen/dimen_80"
                    android:layout_height="@dimen/dimen_80"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:src="@mipmap/ic_logo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/author"
                    android:textColor="@color/text_black_87"
                    android:textSize="@dimen/text_18"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/tv_version"
                    app:layout_constraintTop_toBottomOf="@+id/iv_header" />


                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CCAONG"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_author"
                    app:layout_constraintLeft_toRightOf="@+id/tv_author"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_author" />


                <TextView
                    android:id="@+id/project_introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:text="@string/project_introduction"
                    android:textColor="@color/text_black_87"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_version" />

                <TextView
                    android:id="@+id/introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brief_introduction"
                    android:textColor="@color/text_black_54"
                    app:layout_constraintBottom_toBottomOf="@+id/project_introduction"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/project_introduction" />

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/contact_author"
                    android:textColor="@color/text_black_87"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/introduction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_information"
                    android:textColor="@color/text_black_54"
                    app:layout_constraintBottom_toBottomOf="@+id/contact"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/contact" />

                <TextView
                    android:id="@+id/project_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/project_address"
                    android:textColor="@color/text_black_87"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contact" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_address"
                    android:textColor="@color/text_black_54"
                    android:textSize="@dimen/text_12"
                    app:layout_constraintBottom_toBottomOf="@+id/project_address"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/project_address" />


                <TextView
                    android:id="@+id/tv_thank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:text="@string/thank"
                    android:textColor="@color/text_black_87"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/project_address" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:src="@mipmap/ic_github"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_thank"
                    app:layout_constraintLeft_toRightOf="@+id/tv_thank"
                    app:layout_constraintTop_toTopOf="@+id/tv_thank" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_thank" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</layout>